--- a/app/src/main/res/layout/activity_login_facebook.xml
+++ b/app/src/main/res/layout/activity_login_facebook.xml
@@ -40,7 +40,7 @@ android:layout_height="match_parent">
     android:layout_height="50dp"
     android:background="@color/colorPrimaryDark"
     android:text="@string/login"
-    android:textAllCaps="false"
+    android:textAllCaps="true"
     android:textColor="@color/white"
     android:textSize="25sp" />
 
